--- a/2026/Spring/Mathematical Methods for International Commerce/Week 1_1/xaringan-themer.css
+++ b/2026/Spring/Mathematical Methods for International Commerce/Week 1_1/xaringan-themer.css
@@ -15,7 +15,7 @@
  *    - xaringan wiki: https://github.com/yihui/xaringan/wiki
  *    - remarkjs wiki: https://github.com/gnab/remark/wiki
  *
- *  Version: 0.4.2
+ *  Version: 0.4.3
  *
  * ------------------------------------------------------- */
 @import url(https://fonts.googleapis.com/css?family=Montserrat:500,550i&display=swap);
@@ -44,20 +44,20 @@
 
   /* Colors */
   --text-color: #272822;
-  --header-color: #1c5253;
+  --header-color: #851a10;
   --background-color: #FFFFFF;
-  --link-color: #1c5253;
-  --text-bold-color: #1c5253;
+  --link-color: #851a10;
+  --text-bold-color: #851a10;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FFFFFF;
-  --inverse-background-color: #1c5253;
+  --inverse-background-color: #851a10;
   --inverse-header-color: #FFFFFF;
-  --inverse-link-color: #1c5253;
-  --title-slide-background-color: #1c5253;
+  --inverse-link-color: #851a10;
+  --title-slide-background-color: #851a10;
   --title-slide-text-color: #FFFFFF;
-  --header-background-color: #1c5253;
+  --header-background-color: #851a10;
   --header-background-text-color: #FFFFFF;
-  --base: #1c5253;
+  --base: #851a10;
   --white: #FFFFFF;
   --black: #272822;
   --red: #f34213;
@@ -105,10 +105,10 @@ h1, h2, h3 {
 }
 .remark-inline-code {
   font-size: var(--code-inline-font-size);
-  color: #1c5253;
+  color: #851a10;
 }
 .remark-slide-number {
-  color: #1c5253;
+  color: #851a10;
   opacity: 1;
   font-size: 0.9rem;
 }
@@ -156,10 +156,10 @@ a, a > code {
   float: left;
 }
 .left-column h2, .left-column h3 {
-  color: #1c525399;
+  color: #851a1099;
 }
 .left-column h2:last-of-type, .left-column h3:last-child {
-  color: #1c5253;
+  color: #851a10;
 }
 .right-column {
   width: 75%;
@@ -181,7 +181,7 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px #1c525380;
+  border-left: solid 5px #851a1080;
   padding-left: 1em;
 }
 .remark-slide table {
@@ -198,7 +198,7 @@ th, td {
 .remark-slide table:not(.table-unshaded) thead,
 .remark-slide table:not(.table-unshaded) tfoot,
 .remark-slide table:not(.table-unshaded) tr:nth-child(even) {
-  background: #D1DCDC;
+  background: #E6D1CF;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -208,7 +208,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #D1DCDC;
+  background-color: #E6D1CF;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
